infra/k8s/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-control-plane-svc
  namespace: distributed-compute
  labels:
    app.kubernetes.io/name: api-control-plane
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 4000
      protocol: TCP
  selector:
    app.kubernetes.io/name: api-control-plane
